문제 내용 길이 제한 해제, 정답 관련 로직 수정
