# server/api/domain/answerModel.js
@@ -3,5 +3,6 @@ export default class AnswerModel {
     this.questionItemId = data.questionItemId;
     this.answer = data.answer;
     this.gameType = data.gameType;
+    this.elapsedTime = data.elapsedTime;
   }
 }
